<resources>
    <string name="app_name">Calculadora</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_punto">.</string>
    <string name="btn_mas">+</string>
    <string name="btn_menos">-</string>
    <string name="btn_por">*</string>
    <string name="btn_entre">/</string>
    <string name="btn_masmenos">+-</string>
    <string name="btn_raiz">raiz</string>
    <string name="btn_porcentaje">%</string>
    <string name="btn_igual">=</string>
    <string name="btn_unoX">1/x</string>
    <string name="btn_del">DEL</string>
    <string name="btn_CE">CE</string>
    <string name="btn_C">C</string>
    <string name="btn_MC">MC</string>
    <string name="btn_MR">MR</string>
    <string name="btn_MS">MS</string>
    <string name="btn_Mmas">M+</string>
    <string name="btn_Mmenos">M-</string>
    <string name="reset">Reset</string>



</resources>
